--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^5.1.1",
     "react-scripts": "3.1.2",
     "redux": "^4.0.4",
+    "redux-form": "^8.3.0",
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0"
